crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__coin__tests__coin_by_id_query_gql_output.snap
---
source: crates/client/src/client/schema/coin.rs
expression: operation.query
---
query($utxoId: UtxoId!) {
  coin(utxoId: $utxoId) {
    amount
    blockCreated
    assetId
    utxoId
    maturity
    owner
  }
}


